--- a/mercury-tours-automation/pom.xml
+++ b/mercury-tours-automation/pom.xml
@@ -3,30 +3,66 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mitra.qa</groupId>
+    <groupId>com.automation.qa</groupId>
     <artifactId>mercury-tours-automation</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>com.mitra.qa</name>
+    <name>com.automation.qa</name>
     <url>http://maven.apache.org</url>
     <properties>
         <automation.framework.version>1.0.0</automation.framework.version>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <testFailureIgnore>false</testFailureIgnore>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>./src/test/${suite}.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <reuseForks>true</reuseForks>
+                    <systemProperties>
+                        <property>
+                            <name>test.env</name>
+                            <value>EXE</value>
+                        </property>
+                    </systemProperties>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.4.0</version>
+            <version>4.1.2</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.8</version>
+            <version>7.5</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.1.0</version>
         </dependency>
     </dependencies>
 </project>
